--- a/index.html
+++ b/index.html
@@ -3,16 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>yascii-demos</title>
-    <!-- The style.css file allows you to change the look of your web pages.
-         If you include the next line in all your web pages, they will all share the same look.
-         This makes it easier to make new pages for your site. -->
+
+    <title></title>
+
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
-  <body>
-    <h1>Hello hi!</h1>
 
-    <p>Made this site to share some stuff I coded!</p>
-
-  </body>
 </html>
