--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title></title>
-
+    <title>Kai Yasko</title>
+	<footer>Game and Tools Programmer</footer>
+    <!-- The style.css file allows you to change the look of your web pages.
+         If you include the next line in all your web pages, they will all share the same look.
+         This makes it easier to make new pages for your site. -->
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
+  <body>
+    <h1> </h1>
 
+    <p> </p>
+
+  </body>
 </html>
