--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kai Yasko</title>
-	<footer>Game and Tools Programmer</footer>
+
+    <title>Kai Yasko Portfolio</title>
+
+	<h1>Kai Yasko</h1>
+	<h2>Game and Tools Programmer</h2>
     <!-- The style.css file allows you to change the look of your web pages.
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+
   </head>
+
   <body>
-    <h1> </h1>
+    <h1> Projects </h1>
 
     <p> </p>
 
   </body>
+
 </html>
