--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
 
     <title>Kai Yasko Portfolio</title>
 
-	<h1>Kai Yasko</h1>
-	<h2>Game and Tools Programmer</h2>
-    <!-- The style.css file allows you to change the look of your web pages.
-         If you include the next line in all your web pages, they will all share the same look.
-         This makes it easier to make new pages for your site. -->
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+	<h1 id="kai-yasko">Kai Yasko</h1>
+	<h1 id="game-and-tools-programmer">Game and Tools Programmer</h1>
+
+	<hr /> <h1 id="projects">Projects</h1>
+	<h2 id="water-effect"><a
+	href="https://yaskai-water-effect.netlify.app/">Water Effect</a></h2>
+
+	<h2 id="verlet-rope-demo"><a
+	href="https://verlet-demo.netlify.app/">Verlet Rope Demo</a></h2>
+
+	<h2 id="laser-reflection-demo"><a
+	href="https://laser-demo.netlify.app/">Laser Reflection Demo</a></h2>
+	<hr />
 
   </head>
 
