--- a/index.html
+++ b/index.html
@@ -10,24 +10,20 @@
 	<h1 id="kai-yasko">Kai Yasko</h1>
 	<h1 id="game-and-tools-programmer">Game and Tools Programmer</h1>
 
-	<hr /> <h1 id="projects">Projects</h1>
-	<h2 id="water-effect"><a
-	href="https://yaskai-water-effect.netlify.app/">Water Effect</a></h2>
+	<hr /> <h2 id="projects">Projects</h2>
 
-	<h2 id="verlet-rope-demo"><a
-	href="https://verlet-demo.netlify.app/">Verlet Rope Demo</a></h2>
+	<hr /> <h2 id="short demos">Short Demos</h2>
 
-	<h2 id="laser-reflection-demo"><a
-	href="https://laser-demo.netlify.app/">Laser Reflection Demo</a></h2>
+	<h3 id="water-effect"><a
+	href="https://yaskai-water-effect.netlify.app/">Water Effect</a></h3>
+
+	<h3 id="verlet-rope-demo"><a
+	href="https://verlet-demo.netlify.app/">Verlet Rope Demo</a></h3>
+
+	<h3 id="laser-reflection-demo"><a
+	href="https://laser-demo.netlify.app/">Laser Reflection Demo</a></h3>
 	<hr />
 
   </head>
-
-  <body>
-    <h1> Projects </h1>
-
-    <p> </p>
-
-  </body>
 
 </html>
