--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<hr /> <h2 id="projects">Projects</h2>
 
-	<hr /> <h2 id="short demos">Short Demos</h2>
+	<h2 id="short demos">Short Demos</h2>
 
 	<h3 id="water-effect"><a
 	href="https://yaskai-water-effect.netlify.app/">Water Effect</a></h3>
