Added tools and games sections

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<h1 id="kai-yasko">Kai Yasko</h1>
 	<h1 id="game-and-tools-programmer">Game and Tools Programmer</h1>
 
-	<hr /> <h2 id="projects">Projects</h2>
+	<hr />
+	<h2 id="projects">Projects</h2>
 
 	<h2 id="short demos">Short Demos</h2>
 
@@ -22,6 +23,11 @@
 
 	<h3 id="laser-reflection-demo"><a
 	href="https://laser-demo.netlify.app/">Laser Reflection Demo</a></h3>
+
+	<h2 id="tools">Tools</h2>
+
+	<h2 id="games">Games</h2>
+
 	<hr />
 
   </head>
