created tools + games entries

--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@
 	href="https://laser-demo.netlify.app/">Laser Reflection Demo</a></h3>
 
 	<h2 id="tools">Tools</h2>
+	<h3 id="tilemap-editor"><a
+	href="https://github.com/yaskai/milkymapper">Tilemap Editor</a></h3>
+
+	<h3 id="3D-animation-to-sprite-tool"><a
+	href="https://github.com/yaskai/model-crunch">3D Animation to Spritesheet Tool</a></h3>
 
 	<h2 id="games">Games</h2>
+	<h3 id="platformer prototype"><a
+	href="https://github.com/yaskai/Beri01">Platformer Prototype</a></h3>
 
 	<hr />
 
