--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <title>Kai Yasko Portfolio</title>
 
+    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+
 	<h1 id="kai-yasko">Kai Yasko</h1>
 	<h1 id="game-and-tools-programmer">Game and Tools Programmer</h1>
 
