updated css, added some gifs

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+<link href="style.css" rel="stylesheet" type="text/css" media="all">
 
   <head>
     <meta charset="UTF-8">
@@ -19,12 +19,14 @@
 
 	<h3 id="water-effect"><a
 	href="https://yaskai-water-effect.netlify.app/">Water Effect</a></h3>
+	<img src = "img/water.gif">
 
 	<h3 id="verlet-rope-demo"><a
 	href="https://verlet-demo.netlify.app/">Verlet Rope Demo</a></h3>
 
 	<h3 id="laser-reflection-demo"><a
 	href="https://laser-demo.netlify.app/">Laser Reflection Demo</a></h3>
+	<img src = "img/laser2.gif">
 
 	<h2 id="tools">Tools</h2>
 	<h3 id="tilemap-editor"><a
@@ -36,6 +38,7 @@
 	<h2 id="games">Games</h2>
 	<h3 id="platformer prototype"><a
 	href="https://github.com/yaskai/Beri01">Platformer Prototype</a></h3>
+	<img src = "img/berri_fly_00.gif">
 
 	<hr />
 
