--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 	<h3 id="3D-animation-to-sprite-tool"><a
 	href="https://github.com/yaskai/model-crunch">3D Animation to Spritesheet Tool</a></h3>
+	<img src = "img/ducky.gif">
 
 	<h2 id="games">Games</h2>
 	<h3 id="platformer prototype"><a
