--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 	<h3 id="verlet-rope-demo"><a
 	href="https://verlet-demo.netlify.app/">Verlet Rope Demo</a></h3>
+	<img src = "img/rope.gif">
 
 	<h3 id="laser-reflection-demo"><a
 	href="https://laser-demo.netlify.app/">Laser Reflection Demo</a></h3>
@@ -31,6 +32,7 @@
 	<h2 id="tools">Tools</h2>
 	<h3 id="tilemap-editor"><a
 	href="https://github.com/yaskai/milkymapper">Tilemap Editor</a></h3>
+	<img src = "img/tilemap.gif">
 
 	<h3 id="3D-animation-to-sprite-tool"><a
 	href="https://github.com/yaskai/model-crunch">3D Animation to Spritesheet Tool</a></h3>
