added short footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 	<h2 id="game-and-tools-programmer">Game and Tools Programmer</h2>
 
 	<hr />
+
+	<footer>Hello!  My name is Kai.  I'm a (mostly) self-taught programmer.</footer>
+	<footer>I'm proficient in C and comfortable in C++ and C# as well.</footer>
+	<footer> You can reach by email at kyascii@proton.me </footer>
+
+	<hr />
 	<h1 id="projects">Projects</h1>
 
 	<h2 id="short demos">Short Demos</h2>
